--- a/package.json
+++ b/package.json
@@ -2,38 +2,18 @@
   "name": "cheeky-feedback",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=6ad6775ccf67"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=6ad6775ccf67",
+    "storybook": "start-storybook -p 6006"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
+      "react-app"
     ]
   },
   "browserslist": {
@@ -49,21 +29,24 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/builder-vite": "^0.2.0",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "babel-plugin-named-exports-order": "^0.0.2",
+    "@types/react": "^18.0.15",
+    "babel-loader": "^8.2.5",
     "chromatic": "^6.7.0",
-    "prop-types": "^15.8.1",
-    "webpack": "^5.73.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.0"
   },
-  "readme": "ERROR: No README data found!",
-  "_id": "cheeky-feedback@0.1.0"
+  "_id": "cheeky-feedback@0.1.0",
+  "dependencies": {
+    "@stitches/react": "^1.2.8"
+  }
 }
