--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chromatic": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook-dark-mode": "^1.1.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.0"
   },
